修改詹老師的話影片連結

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -169,7 +169,7 @@
 
     <ion-row class="ion-text-center">
       <ion-col size-sm="4" size-md="2" offset-md="3">
-        <a [routerLink]="['/','zhan']">
+        <a href="http://1.34.27.193/Videos/introduction.mp4">
           <ion-img src="../../assets/images/videos.png"></ion-img>
           <!-- <img src="../../assets/images/videos.png" alt=""> -->
         </a>
