--- a/src/app/life/life.page.scss
+++ b/src/app/life/life.page.scss
@@ -1,3 +1,11 @@
-ion-content{
-    --ion-background-color:#fff9c4;
+// ion-content{
+//     --ion-background-color:#fff9c4;
+// }
+
+.score{
+    font-size:2rem;
+}
+
+.stars{
+    margin:0 5px;
 }
