--- a/src/app/year/year.page.html
+++ b/src/app/year/year.page.html
@@ -1,9 +1,41 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>year</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+      <ion-back-button defaultHref="home"></ion-back-button>
+    </ion-buttons>
+    <ion-title>詹惟中紫微斗數</ion-title>
+    <ion-buttons slot="end">
+      <ion-button>
+        <ion-icon slot="icon-only" name="settings"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+
+  <ion-card *ngFor="let d of videos">
+    <ion-card-header>
+      <!-- <ion-card-subtitle>{{d.description}}</ion-card-subtitle> -->
+      <ion-card-title>{{d.description}}</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      <video width="100%" height="240" controls>
+        <source [src]="frontUul+d.url" type="video/mp4">
+      </video>
+    </ion-card-content>
+  </ion-card>
+
+  <!-- <ng-container *ngFor="let d of videos">
+    <a [href]="frontUul+d.url">
+      <ion-button color="primary" Expand="full">{{d.description}}</ion-button>
+    </a>
+  </ng-container> -->
+
+
+
+
 
 </ion-content>
